# serenity-bot-template

./: .glitterrc  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: event_handler.rs  main.rs
src/commands/: info.rs
src/type_map/: mod.rs  pg.rs
