[package]
name = "serenity-bot-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector"], version = "0.10.10" }
tokio = { features = ["macros", "rt-multi-thread"], version = "1.17.0" }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "offline"], default-features = false }